Changed messageCollector to use bundles instead of the javax properties, as this will work better for using different sslContext for internal and external traffic. Also removed redundant writeQueue setting, and some refactoring in tests