@@ -7,7 +7,6 @@ import no.vegvesen.ixn.docker.QpidDockerBaseIT;
 import no.vegvesen.ixn.federation.api.v1_0.Constants;
 import no.vegvesen.ixn.federation.model.*;
 import no.vegvesen.ixn.federation.repository.ListenerEndpointRepository;
-import org.apache.qpid.jms.message.JmsBytesMessage;
 import org.apache.qpid.jms.message.JmsMessage;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Order;
@@ -20,8 +19,8 @@ import jakarta.jms.Message;
 import jakarta.jms.MessageConsumer;
 import javax.naming.NamingException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Path;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
@@ -73,45 +72,52 @@ public class MessageCollectorIT extends QpidDockerBaseIT {
 		ListenerEndpoint listenerEndpoint = new ListenerEndpoint("localhost", "localhost", "localhost", producerContainer.getAmqpsPort(), new Connection(), "subscriptionExchange");
 
 		ListenerEndpointRepository listenerEndpointRepository = mock(ListenerEndpointRepository.class);
-		when(listenerEndpointRepository.findAll()).thenReturn(Arrays.asList(listenerEndpoint));
+		when(listenerEndpointRepository.findAll()).thenReturn(List.of(listenerEndpoint));
 
 		String localIxnFederationPort = consumerContainer.getAmqpsPort().toString();
 		CollectorCreator collectorCreator = new CollectorCreator(
 				sslServerContext(keysStructure),
 				"localhost",
-				localIxnFederationPort,
-				"subscriptionExchange");
+				localIxnFederationPort
+		);
 
 		MessageCollector forwarder = new MessageCollector(listenerEndpointRepository, collectorCreator, backoffProperties);
 		forwarder.runSchedule();
 
-		Source source = createSource(producerContainer.getAmqpsUrl(),"localhost",keysStructure,PRODUCER_SP_NAME);
-		source.start();
+        MessageConsumer consumer;
+        try (Source source = createSource(producerContainer.getAmqpsUrl(), "localhost", keysStructure, PRODUCER_SP_NAME)) {
+            source.start();
 
-		Sink sink = createSink(consumerContainer.getAmqpsUrl(), CONSUMER_SP_NAME,keysStructure,CONSUMER_SP_NAME);
-		MessageConsumer consumer = sink.createConsumer();
+            try (Sink sink = createSink(consumerContainer.getAmqpsUrl(), CONSUMER_SP_NAME, keysStructure, CONSUMER_SP_NAME)) {
+                consumer = sink.createConsumer();
+				source.sendNonPersistentMessage(source.createMessageBuilder()
+						.textMessage("fishy fishy")
+						.userId("localhost")
+						.messageType(Constants.DATEX_2)
+						.publicationType("Obstruction")
+						.publisherName("publishername")
+						.protocolVersion("DATEX2;2.3")
+						.publisherId("SE-123")
+						.publicationId("pub-1")
+						.quadTreeTiles(",232,")
+						.latitude(60.352374)
+						.longitude(13.334253)
+						.originatingCountry("SE")
+						.shardId(1)
+						.shardCount(1)
+						.timestamp(System.currentTimeMillis())
+						.build(), 8000L);
 
-		source.sendNonPersistentMessage(source.createMessageBuilder()
-				.textMessage("fishy fishy")
-				.userId("localhost")
-				.messageType(Constants.DATEX_2)
-				.publicationType("Obstruction")
-				.publisherName("publishername")
-				.protocolVersion( "DATEX2;2.3")
-				.publisherId("SE-123")
-				.publicationId("pub-1")
-				.quadTreeTiles(",232,")
-				.latitude(60.352374)
-				.longitude(13.334253)
-				.originatingCountry("SE")
-				.shardId(1)
-				.shardCount(1)
-				.timestamp(System.currentTimeMillis())
-				.build(), 8000L);
+				Message message = consumer.receive(2000);
+				assertThat(message).withFailMessage("Expected message is not routed").isNotNull();
+				assertThat(message.getJMSExpiration()).withFailMessage("Routed message has noe expiry specified").isNotEqualTo(0L);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
 
-		Message message = consumer.receive(2000);
-		assertThat(message).withFailMessage("Expected message is not routed").isNotNull();
-		assertThat(message.getJMSExpiration()).withFailMessage("Routed message has noe expiry specified").isNotEqualTo(0L);
+
+        }
+
 	}
 
 	@Test
@@ -122,14 +128,14 @@ public class MessageCollectorIT extends QpidDockerBaseIT {
 		ListenerEndpoint listenerEndpoint = new ListenerEndpoint("localhost", "localhost", "localhost", 5671, new Connection(), "subscriptionExchange");
 
 		ListenerEndpointRepository listenerEndpointRepository = mock(ListenerEndpointRepository.class);
-		when(listenerEndpointRepository.findAll()).thenReturn(Arrays.asList(listenerEndpoint));
+		when(listenerEndpointRepository.findAll()).thenReturn(List.of(listenerEndpoint));
 
 		String localIxnFederationPort = consumerContainer.getAmqpsPort().toString();
 		CollectorCreator collectorCreator = new CollectorCreator(
 				sslServerContext(keysStructure),
 				"localhost",
-				localIxnFederationPort,
-				"subscriptionExchange");
+				localIxnFederationPort
+		);
 
 		MessageCollector forwarder = new MessageCollector(listenerEndpointRepository, collectorCreator, backoffProperties);
 		forwarder.runSchedule();
@@ -181,8 +187,8 @@ public class MessageCollectorIT extends QpidDockerBaseIT {
 		CollectorCreator collectorCreator = new CollectorCreator(
 				sslServerContext(keysStructure),
 				"localhost",
-				localIxnFederationPort,
-				"subscriptionExchange");
+				localIxnFederationPort
+		);
 
 		MessageCollector forwarder = new MessageCollector(listenerEndpointRepository, collectorCreator, backoffProperties);
 		forwarder.runSchedule();
@@ -231,8 +237,8 @@ public class MessageCollectorIT extends QpidDockerBaseIT {
 		CollectorCreator collectorCreator = new CollectorCreator(
 				sslServerContext(keysStructure),
 				"localhost",
-				localIxnFederationPort,
-				"subscriptionExchange");
+				localIxnFederationPort
+		);
 
 		MessageCollector forwarder = new MessageCollector(listenerEndpointRepository, collectorCreator, backoffProperties);
 		forwarder.runSchedule();
